src/analyze_ts_deps/snapshots/palinter__analyze_ts_deps__tests__get_project_files_deps_info_test.snap
---
source: src/analyze_ts_deps/tests.rs
expression: results
---
(
    {
        "./src/fileA.ts": DepsResult {
            deps: {},
            circular_deps: None,
        },
        "./src/fileB.ts": DepsResult {
            deps: {
                "./src/fileA.ts",
                "./src/img.svg",
            },
            circular_deps: None,
        },
        "./src/img.svg": DepsResult {
            deps: {},
            circular_deps: None,
        },
        "./src/index.ts": DepsResult {
            deps: {
                "./src/fileA.ts",
                "./src/fileB.ts",
                "./src/img.svg",
            },
            circular_deps: None,
        },
    },
    {
        "./src/fileA.ts": FileDepsInfo {
            imports: {},
            exports: [
                Export {
                    line: 2,
                    name: "a",
                    ignored: false,
                },
                Export {
                    line: 3,
                    name: "b",
                    ignored: false,
                },
            ],
        },
        "./src/fileB.ts": FileDepsInfo {
            imports: {
                "./src/fileA.ts": [
                    Import {
                        import_path: "@src/fileA",
                        line: 3,
                        values: Named(
                            [
                                "a",
                                "b",
                            ],
                        ),
                    },
                ],
                "testLib": [
                    Import {
                        import_path: "testLib",
                        line: 4,
                        values: Named(
                            [
                                "test",
                            ],
                        ),
                    },
                ],
                "./src/img.svg": [
                    Import {
                        import_path: "@src/img.svg",
                        line: 5,
                        values: SideEffect,
                    },
                ],
            },
            exports: [],
        },
        "./src/img.svg": FileDepsInfo {
            imports: {},
            exports: [],
        },
        "./src/index.ts": FileDepsInfo {
            imports: {
                "./src/fileB.ts": [
                    Import {
                        import_path: "@src/fileB",
                        line: 1,
                        values: SideEffect,
                    },
                ],
            },
            exports: [],
        },
    },
)
