src/analyze_ts_deps/snapshots/palinter__analyze_ts_deps__tests__get_project_files_deps_info_test_2.snap
---
source: src/analyze_ts_deps/tests.rs
assertion_line: 150
expression: results
---
{
    "./src/fileA.ts": DepsResult {
        deps: {
            "./src/fileC.ts",
        },
        circular_deps: None,
    },
    "./src/fileB.ts": DepsResult {
        deps: {
            "./src/fileC.ts",
        },
        circular_deps: None,
    },
    "./src/fileC.ts": DepsResult {
        deps: {},
        circular_deps: None,
    },
    "./src/index.ts": DepsResult {
        deps: {
            "./src/fileA.ts",
            "./src/fileB.ts",
            "./src/fileC.ts",
        },
        circular_deps: None,
    },
}
