src/analyze_ts_deps/snapshots/palinter__analyze_ts_deps__tests__project_with_circular_deps.snap
---
source: src/analyze_ts_deps/tests.rs
expression: results
---
{
    "./src/fileA.ts": DepsResult {
        deps: {
            "./src/fileB.ts",
            "./src/fileA.ts",
        },
        circular_deps: Some(
            [
                "|./src/fileA.ts| > ./src/fileB.ts > |./src/fileA.ts|",
            ],
        ),
    },
    "./src/fileB.ts": DepsResult {
        deps: {
            "./src/fileA.ts",
            "./src/fileB.ts",
        },
        circular_deps: Some(
            [
                "|./src/fileB.ts| > ./src/fileA.ts > |./src/fileB.ts|",
            ],
        ),
    },
    "./src/index.ts": DepsResult {
        deps: {
            "./src/fileB.ts",
            "./src/fileA.ts",
        },
        circular_deps: Some(
            [
                "./src/index.ts > |./src/fileB.ts| > ./src/fileA.ts > |./src/fileB.ts|",
            ],
        ),
    },
}
