src/analyze_ts_deps/snapshots/palinter__analyze_ts_deps__tests__project_with_circular_deps_2.snap
---
source: src/analyze_ts_deps/tests.rs
expression: results
---
{
    "./src/1.ts": DepsResult {
        deps: {
            "./src/1.ts",
            "./src/2.ts",
            "./src/3.ts",
        },
        circular_deps: Some(
            [
                "./src/1.ts",
            ],
        ),
    },
    "./src/2.ts": DepsResult {
        deps: {
            "./src/1.ts",
            "./src/2.ts",
            "./src/3.ts",
        },
        circular_deps: Some(
            [
                "./src/1.ts",
            ],
        ),
    },
    "./src/3.ts": DepsResult {
        deps: {
            "./src/1.ts",
            "./src/2.ts",
            "./src/3.ts",
        },
        circular_deps: Some(
            [
                "./src/1.ts",
            ],
        ),
    },
    "./src/b.ts": DepsResult {
        deps: {
            "./src/1.ts",
            "./src/2.ts",
            "./src/3.ts",
            "./src/b.ts",
            "./src/d.ts",
            "./src/e.ts",
            "./src/f.ts",
        },
        circular_deps: Some(
            [
                "./src/1.ts",
                "./src/b.ts",
            ],
        ),
    },
    "./src/c.ts": DepsResult {
        deps: {
            "./src/1.ts",
            "./src/2.ts",
            "./src/3.ts",
            "./src/d.ts",
        },
        circular_deps: Some(
            [
                "./src/1.ts",
            ],
        ),
    },
    "./src/d.ts": DepsResult {
        deps: {
            "./src/1.ts",
            "./src/2.ts",
            "./src/3.ts",
        },
        circular_deps: Some(
            [
                "./src/1.ts",
            ],
        ),
    },
    "./src/e.ts": DepsResult {
        deps: {
            "./src/1.ts",
            "./src/2.ts",
            "./src/3.ts",
            "./src/b.ts",
            "./src/d.ts",
            "./src/e.ts",
            "./src/f.ts",
        },
        circular_deps: Some(
            [
                "./src/1.ts",
                "./src/b.ts",
            ],
        ),
    },
    "./src/f.ts": DepsResult {
        deps: {
            "./src/1.ts",
            "./src/2.ts",
            "./src/3.ts",
            "./src/b.ts",
            "./src/d.ts",
            "./src/e.ts",
            "./src/f.ts",
        },
        circular_deps: Some(
            [
                "./src/1.ts",
                "./src/b.ts",
            ],
        ),
    },
    "./src/index.ts": DepsResult {
        deps: {
            "./src/1.ts",
            "./src/2.ts",
            "./src/3.ts",
            "./src/b.ts",
            "./src/c.ts",
            "./src/d.ts",
            "./src/e.ts",
            "./src/f.ts",
        },
        circular_deps: Some(
            [
                "./src/1.ts",
                "./src/b.ts",
            ],
        ),
    },
}
