src/analyze_ts_deps/snapshots/palinter__analyze_ts_deps__tests__project_with_circular_deps_3.snap
---
source: src/analyze_ts_deps/tests.rs
expression: results
---
{
    "./src/a.ts": DepsResult {
        deps: {
            "./src/b.ts",
            "./src/c.ts",
            "./src/d.ts",
            "./src/e.ts",
            "./src/f.ts",
            "./src/g.ts",
            "./src/h.ts",
            "./src/i.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/b.ts": DepsResult {
        deps: {
            "./src/c.ts",
            "./src/d.ts",
            "./src/e.ts",
            "./src/f.ts",
            "./src/g.ts",
            "./src/h.ts",
            "./src/i.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/c.ts": DepsResult {
        deps: {
            "./src/b.ts",
            "./src/c.ts",
            "./src/d.ts",
            "./src/e.ts",
            "./src/f.ts",
            "./src/g.ts",
            "./src/h.ts",
            "./src/i.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/d.ts": DepsResult {
        deps: {
            "./src/b.ts",
            "./src/c.ts",
            "./src/d.ts",
            "./src/e.ts",
            "./src/f.ts",
            "./src/g.ts",
            "./src/h.ts",
            "./src/i.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/e.ts": DepsResult {
        deps: {
            "./src/c.ts",
            "./src/b.ts",
            "./src/d.ts",
            "./src/e.ts",
            "./src/f.ts",
            "./src/g.ts",
            "./src/h.ts",
            "./src/i.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/f.ts": DepsResult {
        deps: {
            "./src/d.ts",
            "./src/b.ts",
            "./src/c.ts",
            "./src/e.ts",
            "./src/f.ts",
            "./src/g.ts",
            "./src/h.ts",
            "./src/i.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/g.ts": DepsResult {
        deps: {
            "./src/e.ts",
            "./src/c.ts",
            "./src/b.ts",
            "./src/d.ts",
            "./src/f.ts",
            "./src/g.ts",
            "./src/h.ts",
            "./src/i.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/h.ts": DepsResult {
        deps: {
            "./src/f.ts",
            "./src/d.ts",
            "./src/b.ts",
            "./src/c.ts",
            "./src/e.ts",
            "./src/g.ts",
            "./src/h.ts",
            "./src/i.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/i.ts": DepsResult {
        deps: {
            "./src/g.ts",
            "./src/e.ts",
            "./src/c.ts",
            "./src/b.ts",
            "./src/d.ts",
            "./src/f.ts",
            "./src/h.ts",
            "./src/i.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/j.ts": DepsResult {
        deps: {
            "./src/h.ts",
            "./src/f.ts",
            "./src/d.ts",
            "./src/b.ts",
            "./src/c.ts",
            "./src/e.ts",
            "./src/g.ts",
            "./src/i.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/k.ts": DepsResult {
        deps: {
            "./src/i.ts",
            "./src/g.ts",
            "./src/e.ts",
            "./src/c.ts",
            "./src/b.ts",
            "./src/d.ts",
            "./src/f.ts",
            "./src/h.ts",
            "./src/j.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/l.ts": DepsResult {
        deps: {
            "./src/j.ts",
            "./src/h.ts",
            "./src/f.ts",
            "./src/d.ts",
            "./src/b.ts",
            "./src/c.ts",
            "./src/e.ts",
            "./src/g.ts",
            "./src/i.ts",
            "./src/k.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/m.ts": DepsResult {
        deps: {
            "./src/k.ts",
            "./src/i.ts",
            "./src/g.ts",
            "./src/e.ts",
            "./src/c.ts",
            "./src/b.ts",
            "./src/d.ts",
            "./src/f.ts",
            "./src/h.ts",
            "./src/j.ts",
            "./src/l.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/n.ts": DepsResult {
        deps: {
            "./src/l.ts",
            "./src/j.ts",
            "./src/h.ts",
            "./src/f.ts",
            "./src/d.ts",
            "./src/b.ts",
            "./src/c.ts",
            "./src/e.ts",
            "./src/g.ts",
            "./src/i.ts",
            "./src/k.ts",
            "./src/m.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/o.ts": DepsResult {
        deps: {
            "./src/m.ts",
            "./src/k.ts",
            "./src/i.ts",
            "./src/g.ts",
            "./src/e.ts",
            "./src/c.ts",
            "./src/b.ts",
            "./src/d.ts",
            "./src/f.ts",
            "./src/h.ts",
            "./src/j.ts",
            "./src/l.ts",
            "./src/n.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
    "./src/p.ts": DepsResult {
        deps: {
            "./src/n.ts",
            "./src/l.ts",
            "./src/j.ts",
            "./src/h.ts",
            "./src/f.ts",
            "./src/d.ts",
            "./src/b.ts",
            "./src/c.ts",
            "./src/e.ts",
            "./src/g.ts",
            "./src/i.ts",
            "./src/k.ts",
            "./src/m.ts",
            "./src/o.ts",
            "./src/p.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
                "./src/c.ts",
                "./src/d.ts",
                "./src/e.ts",
                "./src/f.ts",
                "./src/g.ts",
                "./src/h.ts",
                "./src/i.ts",
                "./src/j.ts",
                "./src/k.ts",
                "./src/l.ts",
                "./src/m.ts",
                "./src/n.ts",
                "./src/o.ts",
            ],
        ),
    },
}
