src/analyze_ts_deps/snapshots/palinter__analyze_ts_deps__tests__project_with_circular_deps_4.snap
---
source: src/analyze_ts_deps/tests.rs
expression: results
---
{
    "./src/a.ts": DepsResult {
        deps: {
            "./src/b.ts",
            "./src/c.ts",
            "./src/d.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
            ],
        ),
    },
    "./src/b.ts": DepsResult {
        deps: {
            "./src/b.ts",
            "./src/c.ts",
            "./src/d.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
            ],
        ),
    },
    "./src/c.ts": DepsResult {
        deps: {
            "./src/b.ts",
            "./src/c.ts",
            "./src/d.ts",
        },
        circular_deps: Some(
            [
                "./src/b.ts",
            ],
        ),
    },
    "./src/d.ts": DepsResult {
        deps: {},
        circular_deps: None,
    },
}
